<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                tools:ignore="UnusedAttribute">

                <ImageView
                    android:id="@+id/imv_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/product_image"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_price"
                fontPath="font/helveticaneuemedium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/product_price"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_old_price"
                fontPath="font/helveticaneuemedium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/sale_price"
                android:textColor="#999A9A9E"
                android:textSize="10sp"
                android:visibility="visible"
                tools:ignore="MissingPrefix,SmallSp" />

            <TextView
                android:id="@+id/tv_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_price"
                android:includeFontPadding="false"
                android:paddingVertical="2dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/product_sold"
                android:textColor="@color/white"
                android:textSize="7sp"
                android:visibility="visible"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_product_sale_tag"
            android:elevation="2dp"
            android:gravity="center"
            android:visibility="visible"
            tools:ignore="UnusedAttribute">

            <TextView
                android:id="@+id/tv_discount_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sale_percent"
                android:textColor="@color/white"
                android:textSize="9sp"
                android:translationX="3dp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry,SmallSp" />
        </LinearLayout>
    </RelativeLayout>

</layout>