<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imv_product_icon"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/product_image" />

        <ImageView
            android:id="@+id/imv_tag_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="1dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_product_sale_tag" />

        <TextView
            android:id="@+id/tv_sale_percent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/sale_percent"
            android:textColor="#FFFFFF"
            android:translationX="5dp"
            android:translationY="-2dp"
            app:layout_constraintBottom_toBottomOf="@+id/imv_tag_background"
            app:layout_constraintEnd_toEndOf="@+id/imv_tag_background"
            app:layout_constraintStart_toStartOf="@+id/imv_tag_background"
            app:layout_constraintTop_toTopOf="@+id/imv_tag_background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_product_icon">

            <TextView
                android:id="@+id/tv_old_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sale_price"
                android:textColor="#CCCCCC"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
                app:layout_constraintStart_toEndOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="#999A9A9E"
                android:text="@string/product_location"
                android:textAlignment="center"
                android:textColor="#DFDFDF"
                android:textSize="10sp"
                app:drawableStartCompat="@drawable/ic_place"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_product_sold"
                app:layout_constraintEnd_toEndOf="@+id/tv_product_name" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/product_price"
                android:textColor="#FF3F7E"
                android:textSize="13sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/tv_product_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

            <TextView
                android:id="@+id/tv_product_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_price"
                android:backgroundTint="#FD0060"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="@string/product_sold"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
