<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imb_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/description_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/edt_search"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/imb_change_currency"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/description_change_currency"
                app:layout_constraintBottom_toBottomOf="@+id/imb_cart"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imb_cart"
                app:layout_constraintTop_toTopOf="@+id/imb_cart"
                app:srcCompat="@drawable/ic_change_currency" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/bg_item"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="7dp"
                android:drawableTint="#9A9A9E"
                android:ems="10"
                android:hint="@string/hint_search"
                android:inputType="textPersonName"
                android:padding="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                android:textColorHint="#9A9A9E"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imb_back"
                app:layout_constraintDimensionRatio="259:28"
                app:layout_constraintEnd_toStartOf="@+id/imb_cart"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imb_back"
                app:layout_constraintTop_toTopOf="@+id/imb_back" />

            <ImageButton
                android:id="@+id/imb_cart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/description_cart"
                app:layout_constraintBottom_toBottomOf="@+id/edt_search"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/imb_change_currency"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/edt_search"
                app:layout_constraintTop_toTopOf="@+id/edt_search"
                app:srcCompat="@drawable/ic_cart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_product_type_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#1A000000"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_toolbar"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>